# cloverleaf_stdpar

./: CMakeLists.txt  README.md
src/: PdV.cpp  accelerate.cpp  advec_cell.cpp  advec_mom.cpp  build_field.cpp  calc_dt.cpp  clover_leaf.cpp  comms.cpp  comms.h  cxx14_compat.hpp  definitions.h  dpl_shim.h  field_summary.cpp  flux_calc.cpp  generate_chunk.cpp  ideal_gas.cpp  initialise.cpp  initialise.h  initialise_chunk.cpp  pack_kernel.cpp  pack_kernel.h  reset_field.cpp  revert.cpp  start.cpp  start.h  timer.cpp  update_halo.cpp  update_halo.h  update_tile_halo.cpp  update_tile_halo_kernel.cpp  update_tile_halo_kernel.h  utils.hpp  viscosity.cpp  visit.cpp
